js/js.translator/testData/incremental/invalidation/inlineFunctionAnnotations/lib1/l1.4.kt
@JsExport
class MyClassA {
    @JsName("baz")
    inline fun foo() = 33
}
